# risk-metrics

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
docs/: CONTRIBUTING.md  DESIGN.md
notebooks/: 00_setup_and_data.ipynb
src/riskmetrics/: __init__.py  _constants.py  _typing.py  _validation.py  benchmark.py  data.py  drawdown.py  ratios.py  returns.py  tail.py  tearsheet.py  volatility.py
tests/: conftest.py  test_against_empyrical.py  test_benchmark.py  test_benchmark_extra.py  test_drawdown.py  test_drawdown_extra.py  test_properties.py  test_ratios.py  test_ratios_extra.py  test_returns.py  test_returns_extra.py  test_tail.py  test_tail_extra.py  test_tearsheet.py  test_validation.py  test_volatility.py  test_volatility_extra.py
