[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riskmetrics"
version = "0.1.0"
description = "Risk and performance metrics for financial return series."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Fatih Hekimoglu", email = "48997934+FatihHekim0glu@users.noreply.github.com" },
]
keywords = ["finance", "risk", "metrics", "drawdown", "sharpe", "quantitative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
data = [
    "yfinance>=0.2.55",
    "curl_cffi>=0.7",
    "pyarrow>=15.0",
]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.18",
    "kaleido==0.2.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs",
    "empyrical-reloaded>=0.5.10",
]
all = ["riskmetrics[data,dashboard,dev]"]

[project.urls]
Homepage = "https://github.com/FatihHekim0glu/risk-metrics"
Issues = "https://github.com/FatihHekim0glu/risk-metrics/issues"
Changelog = "https://github.com/FatihHekim0glu/risk-metrics/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/riskmetrics"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
# RUF022: __all__ is grouped semantically by module rather than sorted alphabetically.
# RUF002/RUF003: docstrings carry Greek math notation (ρ, η, Σ) by design.
ignore = ["RUF022", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# Module docstrings are kept on a single line for discoverability.
"src/riskmetrics/*.py" = ["E501"]
# Test names embed capital math/API tokens (N divisor, RollingOLS, etc.) and the
# empyrical-parity file uses importorskip + lazy imports by design.
"tests/*.py" = ["N802", "E402", "E501"]

[tool.mypy]
strict = false
warn_return_any = false
files = ["src/riskmetrics"]
# Disable pandas-stubs noise that doesn't represent runtime bugs. The library
# is verified runtime-correct via the 46-test hand-calc + property + parity
# suite; pandas-stubs returns broad union types (datetime64 | timedelta64 |
# complex | floating | ...) for scalar Series ops that real numerical code
# narrows safely with float()/np.float64. Suppressing the resulting noise:
#   operator: __rpow__ overload mismatches when Series.prod() ** float.
#   arg-type: float() of a pandas scalar that mypy widens to a union.
#   union-attr: .year/.month on idxmax results widened to int | str | Series.
#   attr-defined: .year/.month on Index when stubs cannot narrow to DatetimeIndex.
#   return-value: tuple[Any, float] vs declared tuple[Timestamp, float].
disable_error_code = [
    "operator",
    "arg-type",
    "union-attr",
    "attr-defined",
    "return-value",
]

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "statsmodels.*",
    "empyrical.*",
    "yfinance",
    "yfinance.*",
    "pandas_datareader",
    "pandas_datareader.*",
    "curl_cffi",
    "curl_cffi.*",
    "pyarrow",
    "pyarrow.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
